PostGIS 3.5.1
xxxx/xx/xx

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.

* Bug fixes *

- #5795, Fix ST_NewEdgesSplit can cause invalid topology
         (Björn Harrtell)
- #5794, Fix crash in TopoGeo_addPoint (Sandro Santilli)
- #5785, [raster] ST_MapAlgebra segfaults when expression references
         a supernumerary rast argument (Dian M Fay)
- #5787, Check that ST_ChangeEdgeGeom doesn't change winding of rings
         (Sandro Santilli)
- #5791, Add legacy stubs for old transaction functions
         to allow pg_upgrade (Regina Obe)
- #5800, PROJ compiled version reading the wrong minor and micro
         (Regina Obe)
- #5790, Non-schema qualified calls causing issue with 
         materialized views (Regina Obe)

* Enhancements *

  - #5782, Improve robustness of min distance calculation (Sandro Santilli)
  - Speedup topology building when closing large rings with many
    hooles (Björn Harrtell)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clip envelopes to tile plane
           extent (Paul Ramsey)


PostGIS 3.5.0
2024/09/25

To take advantage of all postgis_sfcgal extension features SFCGAL 1.5+ is needed.
PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.

Many thanks to our translation teams, in particular:

Dapeng Wang, Zuo Chenwei from HighGo (Chinese Team)
Teramoto Ikuhiro (Japanese Team)
Andreas Schild (German Team)

* Breaking Changes *

  - #5546, TopoGeometry <> TopoGeometry is now ambiguous, to get
           the old behaviour, assuming your TopoGeometry objects
           are named tg1 and tg2, use: (
              id(tg1) <> id(tg2) OR
              topology_id(tg1) <> topology_id(tg2) OR
              layer_id(tg1) <> layer_id(tg2) OR
              type(tg1) <> type(tg2)
           ) (Sandro Santilli)
  - #5536, comments are not anymore included in PostGIS extensions
           (Sandro Santilli)