@@ -29,3 +29,5 @@ full-merge-exterior-face|-checking-
 double-merge-forward-backward|-checking-
 multi-merge-forward-backward|-checking-
 multi-merge-closest-not-containing-projected|-checking-
+ERROR:  snapping edge 2 to new node moves it past edge 3
+ERROR:  snapping edge 2 to new node moves it past edge 3
